:bug: fix overlapping class name

--- a/css/index.css
+++ b/css/index.css
@@ -581,8 +581,7 @@ h3 {
   display: flex;
   flex-direction: column;
 }
-
-.label {
+.input-wrapper .label {
   margin-bottom: var(--element-margin);
 }
 
@@ -927,16 +926,19 @@ h3 {
 
 :root {
   --checkbox-active: var(--primary);
+  --checkbox-size: 25px;
 }
 
 .checkbox {
-  display: block;
+  display: flex;
+  align-items: center;
   position: relative;
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
   font-size: 22px;
   user-select: none;
+  height: var(--checkbox-size);
 }
 .checkbox input {
   position: absolute;
@@ -952,12 +954,18 @@ h3 {
 .checkbox input:checked ~ .checkmark .icon {
   display: block;
 }
+.checkbox .label {
+  font-size: var(--text-size);
+}
+.checkbox.disabled {
+  cursor: no-drop;
+}
 .checkbox .checkmark {
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: var(--checkbox-size);
+  width: var(--checkbox-size);
   display: flex;
   justify-content: center;
   align-items: center;
