--- a/css/input-fields.css
+++ b/css/input-fields.css
@@ -12,8 +12,7 @@
   display: flex;
   flex-direction: column;
 }
-
-.label {
+.input-wrapper .label {
   margin-bottom: var(--element-margin);
 }
 
